tests/ui/consts/issue-76064.rs
struct Bug([u8; panic!("panic")]); //~ ERROR evaluation of constant value failed

fn main() {}
